  TestUtil.getDelimitedString() simplified using String.join()
  ValueObserver added, for read only access to Values, Value.get() and Value.getObserver() moved to ValueObserver, Value extends it
  ValueObserver.getObserver() renamed to getChangeObserver()
  Misc. javadoc fixes and some minor changes
  TableModelProxy removed
  Minor javadoc fixes and getting rid of ret return variable name
  Values.value() overloaded with nullValue parameter, for preventing null values
  Value.isNullable() added, some related refactoring
  Values.valueState() added
  Values.StatValue.set() minor improvement
  ConfigurationStore added
  ConfigurationStore values now set the value to defaultValue when values are set to null
  ConfigurationStore, major refactoring
  ConfigurationStore.getConfigurationValue() added
  ValueParser moved up from Configuration and renamed StringParser
  ConfigurationStore, renamed to PropertyStore, some internal renamings as well as javadoc fixes
  State.isActive() and setActive() renamed to get() and set() respectively
  ValueChange.getOldValue() and getNewValue() renamed to getPreviousValue() and getCurrentValue() respectively
  IntelliJ code analysis based fixes
  StringParser removed, replaced with Function<String, ?>
  FileUtil.getBytesFromFile() removed, use Files.readAllBytes()
  PropertyStore now removes the property when the value is set to null instead of using the defaultValue
0.12.3
  PropertyStore now syncs values to system properties
  Configuration now based on PropertyStore
  PropertyValue interface added, PropertyStore now uses these
  Configuration now uses PropertyValue
  PropertyValue.toString() overridden, now returns the property name
  Module jminor-framework-db-test renamed to jminor-framework-domain-test
  Package names org.jminor.framework.domain.testing and org.jminor.swing.framework.ui.testing to .test to reflect module names